Create cookies for render mesasaje for user when create new ONG

--- a/web/templates/auth/login.html
+++ b/web/templates/auth/login.html
@@ -19,7 +19,7 @@
             <div style="color: red;">
               <p>Email o contrasena incorrecto</p>
             </div>
-          {% endif %}
+            ong_created
 
           <label for="email"><b>Email</b></label>
           <input type="text" placeholder="Ingrese su email" name="email" required>
