--- a/web/templates/admin/new_ongs.html
+++ b/web/templates/admin/new_ongs.html
@@ -19,6 +19,9 @@
     <label for="contact_number"><b>Número de contacto</b></label>
     <input type="text" placeholder="Número de contacto" name="contact_number" value="{{ong['contact_number']}}"   required>
 
+    <label for="email"><b>Correo Electrónico</b></label>
+    <input type="text" placeholder="Dirección" name="email" value="{{ong['email']}}" required>
+
     <label for="address"><b>Dirección</b></label>
     <input type="text" placeholder="Dirección" name="address" value="{{ong['address']}}" required>
 
