--- a/web/templates/form_home.html
+++ b/web/templates/form_home.html
@@ -36,7 +36,7 @@
                 
 
                 <label for="email"><b>Correo Electrónico</b></label>
-                <input type="text" placeholder="Enter Email" name="email" required> -->
+                <input type="text" placeholder="Enter Email" name="email" required> 
 
 
                 <div action="" class="dates-person">
@@ -59,6 +59,7 @@
         </form>
 
     </div>
+        <script src="/static/js/layout.js"></script>
         
 </body>
 </html>
