--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,176 +1,215 @@
-
 {% extends 'layout.html' %}
 
 {% block styles %}
-  <link rel="stylesheet" type="text/css" href="/static/styles/styles.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="/static/styles/styles.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 {% endblock %}
 
 
 
 {% block content %}
-  <p>mi nombre es: {{title}}</p>
+<p>mi nombre es: {{title}}</p>
 
-  <div class="slideshow-container">
-    <div class="mySlides fade">
-      <div class="slideshow-text">
-        <p>" Siempre que dudes lo lejos que puedes llegar. Solo recuerda lo lejos que has llegado. Recuerda todo lo que
-          has enfrentado, todas las batallas que has ganado y todos los temores que has superado..."</p>
+<div class="slideshow-container">
+  <div class="mySlides fade">
+    <div class="slideshow-text">
+      <p>" Siempre que dudes lo lejos que puedes llegar. Solo recuerda lo lejos que has llegado. Recuerda todo lo que
+        has enfrentado, todas las batallas que has ganado y todos los temores que has superado..."</p>
+    </div>
+    <img src="/static/img/1.png" style="width:100%; height: 100%">
+  </div>
+
+  <div class="mySlides fade">
+    <div class="slideshow-text">
+      <p> " Dentro de veinte años a partir de ahora te arrepentirás de las cosas que no hiciste, así que suelta las
+        amarras y navega fuera de tu zona de confort, busca el viento en tus velas. Explora, Sueña, Descubre... "</p>
+    </div>
+    <img src="/static/img/2.png" style="width:100%; height: 100%">
+
+  </div>
+
+  <div class="mySlides fade">
+    <div class="slideshow-text">
+      <p>" Algún día todo tendrá perfecto sentido. Así que por ahora ríete de la confusión, sonríe a través de las
+        lágrimas y sigue recordándote a ti mismo que todo sucede por una razón... "</p>
+    </div>
+    <img src="/static/img/21.jpg" style="width:100%; height: 100%">
+  </div>
+
+  <div
+    style="margin-top: 20px;margin-top: 20px; position: absolute;display: flex; width: 100%; justify-content: center;">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+  </div>
+</div>
+
+<div id="how" class="description">
+  <h2>Quienes Somos</h2>
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos ea, repellat sed tempora pariatur aut
+    ex quae voluptate officiis omnis nihil quo. Asperiores debitis consequatur sed soluta pariatur inventore
+    quo.
+    Similique a eaque quam voluptatibus cumque voluptates, numquam dignissimos doloremque atque vero totam
+    quibusdam nesciunt autem soluta perspiciatis nulla et labore nobis nemo odio ipsum nisi aperiam? Magnam,
+    dolore perferendis.
+    Hic excepturi culpa iure. Recusandae optio, quae enim eius corporis illum quaerat rerum, laborum facere hic
+    voluptates. Recusandae, fuga laboriosam in quo aperiam aliquid perferendis quibusdam dolorum commodi et
+    sequi.
+
+
+  </p>
+</div>
+
+<div class="container">
+  <div class="content">
+    <h3>" La vida es una oportunidad, benefíciate de ella. La vida es belleza, admírala. La vida es un sueño,
+      alcánzalo. La vida es un desafío, enfréntalo, La vida es un juego, juégalo... "</h3>
+    <h4>Madre Teresa de Calcuta</h4>
+  </div>
+</div>
+
+<section id="cat" class="categories">
+  <h2>Categorías</h2>
+
+  <div class="row">
+    <div class="column">
+      <div class="card">
+        <img src="/static/img/10.jpg  " alt="Jane" style="width:100%">
+        <div class="cards">
+          <div class="card-h3">
+            <h3>Familia</h3>
+          </div>
+          <button class="button">Click Aquí</button>
+        </div>
       </div>
-      <img src="/static/img/1.png" style="width:100%; height: 100%">
     </div>
 
-    <div class="mySlides fade">
-      <div class="slideshow-text">
-        <p> " Dentro de veinte años a partir de ahora te arrepentirás de las cosas que no hiciste, así que suelta las
-          amarras y navega fuera de tu zona de confort, busca el viento en tus velas. Explora, Sueña, Descubre... "</p>
+    <div class="card">
+      <img src="/static/img/17.jpg" alt="Mike" style="width:100%">
+      <div class="cards">
+        <div class="card-h3">
+          <h3>Violencia de Género</h3>
+        </div>
+        <button class="button">Click Aquí</button>
       </div>
-      <img src="/static/img/2.png" style="width:100%; height: 100%">
-
     </div>
 
-    <div class="mySlides fade">
-      <div class="slideshow-text">
-        <p>" Algún día todo tendrá perfecto sentido. Así que por ahora ríete de la confusión, sonríe a través de las
-          lágrimas y sigue recordándote a ti mismo que todo sucede por una razón... "</p>
+
+    <div class="card">
+      <img src="/static/img/15.jpg" alt="John" style="width:100%">
+      <div class="cards">
+        <div class="card-h3">
+          <h3>Adicciones</h3>
+        </div>
+        <button class="button">Click Aquí</button>
       </div>
-      <img src="/static/img/21.jpg" style="width:100%; height: 100%">
     </div>
 
-    <div
-      style="margin-top: 20px;margin-top: 20px; position: absolute;display: flex; width: 100%; justify-content: center;">
-      <span class="dot" onclick="currentSlide(1)"></span>
-      <span class="dot" onclick="currentSlide(2)"></span>
-      <span class="dot" onclick="currentSlide(3)"></span>
+
+    <div class="card">
+      <img src="/static/img/18.jpg" alt="John" style="width:100%">
+      <div class="cards">
+        <div class="card-h3">
+          <h3> Peronas en Situación de Calle</h3>
+        </div>
+        <button class="button">Click Aquí</button>
+      </div>
     </div>
   </div>
 
-  <div  id="how" class="description">
-    <h2>Quienes Somos</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos ea, repellat sed tempora pariatur aut
-      ex quae voluptate officiis omnis nihil quo. Asperiores debitis consequatur sed soluta pariatur inventore
-      quo.
-      Similique a eaque quam voluptatibus cumque voluptates, numquam dignissimos doloremque atque vero totam
-      quibusdam nesciunt autem soluta perspiciatis nulla et labore nobis nemo odio ipsum nisi aperiam? Magnam,
-      dolore perferendis.
-      Hic excepturi culpa iure. Recusandae optio, quae enim eius corporis illum quaerat rerum, laborum facere hic
-      voluptates. Recusandae, fuga laboriosam in quo aperiam aliquid perferendis quibusdam dolorum commodi et
-      sequi.
+  <div class="row">
+
+    <div class="card">
+      <img src="/static/img/12.jpg" alt="Jane" style="width:100%">
+      <div class="cards">
+        <div class="card-h3">
+          <h3>Ollas Populares</h3>
+        </div>
+        <button class="button">Click Aquí</button>
+      </div>
+    </div>
 
 
-    </p>
-  </div>
 
-  <div class="container">
-    <div class="content">
-      <h3>" La vida es una oportunidad, benefíciate de ella. La vida es belleza, admírala. La vida es un sueño,
-        alcánzalo. La vida es un desafío, enfréntalo, La vida es un juego, juégalo... "</h3>
-      <h4>Madre Teresa de Calcuta</h4>
+    <div class="card">
+      <img src="/static/img/13.jpg" alt="Mike" style="width:100%">
+      <div class="cards">
+        <div class="card-h3">
+          <h3> Refugios de Animales</h3>
+        </div>
+        <button class="button">Click Aquí</button>
+      </div>
+    </div>
+
+
+
+    <div class="card">
+      <img src="/static/img/19.jpg" alt="John" style="width:100%">
+      <div class="cards">
+        <div class="card-h3">
+          <h3>Dicriminación</h3>
+        </div>
+        <button class="button">Click Aquí</button>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="/static/img/img16.jpg" alt="John" style="width:100%">
+      <div class="cards">
+        <div class="card-h3">
+          <h3> Personas con Capacidades Diferentes</h3>
+        </div>
+        <button class="button">Click Aquí</button>
+      </div>
     </div>
   </div>
+</section>
 
-  <section id="cat" class="categories">
-    <h2>Categorías</h2>
+{% if ong_created == 'True' %}
+<div
+  style="
+    position: fixed;
+    top: 15px;
+    z-index: 1000;
+    background: blueviolet;
+    padding: 20px 50px;
+    color: white;
+    font-size: 30px;
+    border-radius: 10px;
+    right: 22px;
+    display: block;"
+>
+  Su ONG se creo correctamente
+  <div
+    style="
+      border: 1px solid white;
+      border-radius: 50%;
+      display: block;
+      width: 25px;
+      height: 25px;
+      text-align: center;
+      font-size: 18px;
+      position: absolute;
+      top: 6px;
+      right: 6px;
+      cursor: pointer;"
+    onclick="this.parentNode.style.display = 'none'"
+  >
+    x
+  </div>
+  
 
-    <div class="row">
-      <div class="column">
-        <div class="card">
-          <img src="/static/img/10.jpg  " alt="Jane" style="width:100%">
-          <div class="cards">
-            <div class="card-h3">
-              <h3>Familia</h3>
-            </div>
-            <button class="button">Click Aquí</button>
-          </div>
-        </div>
-      </div>
+</div>
+{% endif %}
 
-      <div class="card">
-        <img src="/static/img/17.jpg" alt="Mike" style="width:100%">
-        <div class="cards">
-          <div class="card-h3">
-            <h3>Violencia de Género</h3>
-          </div>
-          <button class="button" >Click Aquí</button>
-        </div>
-      </div>
-
-
-      <div class="card">
-        <img src="/static/img/15.jpg" alt="John" style="width:100%">
-        <div class="cards">
-          <div class="card-h3">
-            <h3>Adicciones</h3>
-          </div>
-          <button class="button">Click Aquí</button>
-        </div>
-      </div>
-
-
-      <div class="card">
-        <img src="/static/img/18.jpg" alt="John" style="width:100%">
-        <div class="cards">
-          <div class="card-h3">
-            <h3> Peronas en Situación de Calle</h3>
-          </div>
-          <button class="button">Click Aquí</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="row">
-
-      <div class="card">
-        <img src="/static/img/12.jpg" alt="Jane" style="width:100%">
-        <div class="cards">
-          <div class="card-h3">
-            <h3>Ollas Populares</h3>
-          </div>
-          <button class="button">Click Aquí</button>
-        </div>
-      </div>
-
-
-
-      <div class="card">
-        <img src="/static/img/13.jpg" alt="Mike" style="width:100%">
-        <div class="cards">
-          <div class="card-h3">
-            <h3> Refugios de Animales</h3>
-          </div>
-          <button class="button">Click Aquí</button>
-        </div>
-      </div>
-
-
-
-      <div class="card">
-        <img src="/static/img/19.jpg" alt="John" style="width:100%">
-        <div class="cards">
-          <div class="card-h3">
-            <h3>Dicriminación</h3>
-          </div>
-          <button class="button">Click Aquí</button>
-        </div>
-      </div>
-
-      <div class="card">
-        <img src="/static/img/img16.jpg" alt="John" style="width:100%">
-        <div class="cards">
-          <div class="card-h3">
-            <h3> Personas con Capacidades Diferentes</h3>
-          </div>
-          <button class="button">Click Aquí</button>
-        </div>
-      </div>
-    </div>
-  </section>
 {% endblock %}
+
+
+
 
 {% block scripts %}
-  <script src="/static/js/scripts.js"></script>
-  <script src="https://kit.fontawesome.com/b9132d8f3b.js" crossorigin="anonymous"></script>
+<script src="/static/js/scripts.js"></script>
+<script src="https://kit.fontawesome.com/b9132d8f3b.js" crossorigin="anonymous"></script>
 {% endblock %}
-
