--- a/web/templates/admin/new_ongs.html
+++ b/web/templates/admin/new_ongs.html
@@ -22,6 +22,9 @@
     <label for="email"><b>Correo Electrónico</b></label>
     <input type="text" placeholder="Dirección" name="email" value="{{ong['email']}}" required>
 
+    <label for="link_ong"><b>Link de la ONG</b></label>
+    <input type="text" placeholder="Dirección" name="link_ong" value="{{ong['link_ong']}}" >
+
     <label for="address"><b>Dirección</b></label>
     <input type="text" placeholder="Dirección" name="address" value="{{ong['address']}}" required>
 
