--- a/web/templates/form_home.html
+++ b/web/templates/form_home.html
@@ -38,6 +38,9 @@
                 <label for="email"><b>Correo Electrónico</b></label>
                 <input type="text" placeholder="Enter Email" name="email" required> 
 
+                <label for="link_ong"><b> Introduzca el Link de web la ONG si tiene</b></label>
+                <input type="text" placeholder="Dirección" name="link_ong">
+
 
                 <div action="" class="dates-person">
                     <h1 style="margin-bottom: 8px;">Datos de la persona que ingresa la ONG</h1>
