--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -22,21 +22,7 @@
                 <div class="image_navbar"><img id="logo" alt="logo" src="/static/img/image1.png"></div>
                 <div class="menu">
                     <a href="#how" class="menu_item">Quiénes Somos</a>
-                    <div class="dropdown">
-                        <a href="#cat" onmouseover="myFunctionDropdown()" class="dropbtn menu_item">Categorías <div
-                                class="icon-dropdown"><i class="fas fa-chevron-down"></div></i></a>
-                        <div id="myDropdown" class="dropdown-content">
-                            <a href="#">Familia</a>
-                            <a href="#">Violencia de Género</a>
-                            <a href="#">Adicciones</a>
-                            <a href="#">Personas en Situación de Calle</a>
-                            <a href="#">Ollas Populares</a>
-                            <a href="#">Refugios de Animales</a>
-                            <a href="#">Discriminación</a>
-                            <a href="#">Personas con Capacidades Diferentes</a>
-                        </div>
-
-                    </div>
+                    <a href="#cat" onmouseover="myFunctionDropdown()" class="dropbtn menu_item">Categorías </a>
                     <a href="#cnt" class="menu_item">Contacto</a>
                     <a class="menu_item" href="/admin/ongs/form">Introduce tu
                         ONG</a>
