--- a/web/templates/admin/list_ong.html
+++ b/web/templates/admin/list_ong.html
@@ -52,6 +52,7 @@
     <th >Descripción</th>
     <th > Número de contacto</th>
     <th > Correo Electrónico</th>
+    <th > Link de la ONG</th>
     <th > Dirección</th>
     <th >Nombre del encargado/a de la ONG</th>
     <th > Número de contacto</th>
@@ -66,6 +67,7 @@
     <td>{{d['description']}}</td>
     <td>{{d['contact_number']}}</td>
     <td>{{d['email']}}</td>
+    <td>{{d['link_ong']}}</td>
     <td>{{d['address']}}</td>
     <td>{{d['manager_name']}}</td>
     <td>{{d['manager_contact']}}</td>
