--- a/web/templates/auth/login.html
+++ b/web/templates/auth/login.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/static/styles/login.css">
-    <title>Login</title>
-</head>
-<body>
-    <form action="/auth/login" method="post">
-        <div class="imgcontainer">
-          <img src="/static/img/image.png" alt="Avatar" class="avatar">
-        </div>
-      
-        <div class="container">
-          {% if error == True %}
-            <div style="color: red;">
-              <p>Email o contrasena incorrecto</p>
-            </div>
-            ong_created
 
-          <label for="email"><b>Email</b></label>
-          <input type="text" placeholder="Ingrese su email" name="email" required>
-      
-          <label for="password"><b>Contraseña</b></label>
-          <input type="password" placeholder="Ingrese su contraseña" name="password" required>
-      
-          <button type="submit">Entrar</button>
-          <label style="text-align: center">
-          </label>
-        </div>
-      </form>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/static/styles/login.css">
+  <title>Login</title>
+</head>
+
+<body>
+  <form action="/auth/login" method="post">
+    <div class="imgcontainer">
+      <img src="/static/img/image.png" alt="Avatar" class="avatar">
+    </div>
+
+    <div class="container">
+      {% if error == True %}
+      <div style="color: red;">
+        <p>Email o contrasena incorrecto</p>
+      </div>
+      {% endif %}
+
+      <label for="email"><b>Email</b></label>
+      <input type="text" placeholder="Ingrese su email" name="email" required>
+
+      <label for="password"><b>Contraseña</b></label>
+      <input type="password" placeholder="Ingrese su contraseña" name="password" required>
+
+      <button type="submit">Entrar</button>
+      <label style="text-align: center">
+      </label>
+    </div>
+  </form>
 </body>
+
 </html>
