--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -81,7 +81,7 @@
           <div class="card-h3">
             <h3>Familia</h3>
           </div>
-          <button class="button">Click Aquí</button>
+          <a class="button" href="/categories2">Click Aquí</a>
         </div>
       </div>
     </div>
@@ -92,7 +92,7 @@
         <div class="card-h3">
           <h3>Violencia de Género</h3>
         </div>
-        <button class="button">Click Aquí</button>
+        <a class="button" href="/categories2">Click Aquí</a>
       </div>
     </div>
 
@@ -103,7 +103,7 @@
         <div class="card-h3">
           <h3>Adicciones</h3>
         </div>
-        <button class="button">Click Aquí</button>
+        <a class="button" href="/categories2">Click Aquí</a>
       </div>
     </div>
 
@@ -114,7 +114,7 @@
         <div class="card-h3">
           <h3> Peronas en Situación de Calle</h3>
         </div>
-        <button class="button">Click Aquí</button>
+        <a class="button" href="/categories2">Click Aquí</a>
       </div>
     </div>
   </div>
@@ -127,7 +127,7 @@
         <div class="card-h3">
           <h3>Ollas Populares</h3>
         </div>
-        <button class="button">Click Aquí</button>
+        <a class="button" href="/categories2">Click Aquí</a>
       </div>
     </div>
 
@@ -139,7 +139,7 @@
         <div class="card-h3">
           <h3> Refugios de Animales</h3>
         </div>
-        <button class="button">Click Aquí</button>
+        <a class="button" href="/categories2">Click Aquí</a>
       </div>
     </div>
 
@@ -151,7 +151,7 @@
         <div class="card-h3">
           <h3>Dicriminación</h3>
         </div>
-        <button class="button">Click Aquí</button>
+        <a class="button" href="/categories2">Click Aquí</a>
       </div>
     </div>
 
@@ -161,7 +161,7 @@
         <div class="card-h3">
           <h3> Personas con Capacidades Diferentes</h3>
         </div>
-        <button class="button">Click Aquí</button>
+        <a class="button" href="/categories2">Click Aquí</a>
       </div>
     </div>
   </div>
