--- a/web/static/styles/styles.css
+++ b/web/static/styles/styles.css
@@ -252,21 +252,18 @@ background-color: #002a58;
   height: 130px;
 }
 
-.row{
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 70px;
-  align-content: center;
-  justify-content: center
+
+.container_card{
+    display: inline-block;
+    margin: 50px 50px ;
 }
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 285px;
+  display: inline-block;
+  text-align: center;
+  width: 20%;
   height: 300px;
   margin: 30px 35px;
 }
@@ -290,7 +287,7 @@ background-color: #002a58;
   cursor: pointer;
   width: 240px;
   border-radius: 10px;
-  margin-top: 7px;
+  margin-top: 5px 7px;
   font-size: 18px;
   text-decoration: none;
 }
